--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5101,12 +5101,8 @@ body.modal-active {
   background-color: #ffffff;
   pointer-events: none;
 }
-.z-component .z-element .datepicker,
-.z-component .z-element .datetimepicker {
-  background: #ffffff url("../media/icons/icon_calendar.svg") no-repeat 98% 50%;
-}
-.z-component .z-element .timepicker {
-  background: #ffffff url("../media/icons/icon_clock.svg") no-repeat 98% 50%;
+.z-component .z-element .picker-wrapper-date .datepicker {
+  width: 100%;
 }
 
 .z-component .z-component-label .required.off {
@@ -5285,6 +5281,10 @@ body.modal-active {
   align-items: center;
   flex-wrap: wrap;
   margin: 0.3125rem 0;
+}
+.property .default-type-radio .radio-property-group .radio-item .input {
+  width: 2.813rem;
+  margin: 0 0.3125rem 0 0;
 }
 .property .default-type-radio .radio-property-group .picker-wrapper-date {
   display: inline-block;
