bz-color.scss 업데이트
- color.mix > mix로 수정
  : scss function 참고

--- a/src/main/resources/public/scss/template/bz-colors.scss
+++ b/src/main/resources/public/scss/template/bz-colors.scss
@@ -1,151 +1,224 @@
-//brand
-$brand-color-brainz: #0066FF !default;
-$brand-color-zenius: #FF850A !default;
+//브랜드 컬러
+$brand-color-brainz: #0066FF;
+$brand-color-zenius: #FF850A;
 
-//severity
-$normal-00: #54cd3e !default;
-$info-10: #06deff !default;
-$caution-20: #ffc439 !default;
-$danger-30: #ff9130 !default;
-$urgent-40: #c54ce8 !default;
-$critical-50: #f43b51 !default;
-$category01: #0096ff !default;
-$category02: #38bc20 !default;
+//심각도 팔레트
+$normal-00: #54cd3e;
+$info-10: #06deff;
+$caution-20: #ffc439;
+$danger-30: #ff9130;
+$urgent-40: #c54ce8;
+$critical-50: #f43b51;
+$category01: #0096ff;
+$category02: #38bc20;
 
+// 색상팔레트
 //Blue
-$blue900: #092C73 !default;
-$blue800: #103F8B !default;
-$blue700: #1959AC !default;
-$blue600: #2578CE !default;
-$blue500: #339AF0 !default;
-$blue400: #64BBF6 !default;
-$blue300: #84D1FA !default;
-$blue200: #ADE6FD !default;
-$blue100: #E3F5FC !default;
-$blue50: #F1F9FC !default;
+$blue900: #092C73;
+$blue800: #103F8B;
+$blue700: #1959AC;
+$blue600: #2578CE;
+$blue500: #339AF0;
+$blue400: #64BBF6;
+$blue300: #84D1FA;
+$blue200: #ADE6FD;
+$blue100: #E3F5FC;
+$blue50: #F1F9FC;
+$blue950: #fff;
+$blue850: mix($blue800, $blue900);
+$blue750: mix($blue700, $blue800);
+$blue650: mix($blue600, $blue700);
+$blue550: mix($blue500, $blue600);
+$blue450: mix($blue400, $blue500);
+$blue350: mix($blue300, $blue400);
+$blue250: mix($blue200, $blue300);
+$blue150: mix($blue100, $blue200);
 
 //Green
-$green900: #235A07 !default;
-$green800: #316D0C !default;
-$green700: #468813 !default;
-$green600: #5CA21B !default;
-$green500: #76BD26 !default;
-$green400: #A0D756 !default;
-$green300: #C0EB7A !default;
-$green200: #DBF8A9 !default;
-$green100: #F6FCE0 !default;
-$green50: #F8FDF1 !default;
+$green900: #235A07;
+$green800: #316D0C;
+$green700: #468813;
+$green600: #5CA21B;
+$green500: #76BD26;
+$green400: #A0D756;
+$green300: #C0EB7A;
+$green200: #DBF8A9;
+$green100: #F6FCE0;
+$green50: #F8FDF1;
+$green950: #fff;
+$green850: mix($green800, $green900);
+$green750: mix($green700, $green800);
+$green650: mix($green600, $green700);
+$green550: mix($green500, $green600);
+$green450: mix($green400, $green500);
+$green350: mix($green300, $green400);
+$green250: mix($green200, $green300);
+$green150: mix($green100, $green200);
 
 //Yellow
-$yellow900: #776308 !default;
-$yellow800: #907A0E !default;
-$yellow700: #B39A16 !default;
-$yellow600: #D7BC20 !default;
-$yellow500: #FADF2D !default;
-$yellow400: #FBE961 !default;
-$yellow300: #FDF080 !default;
-$yellow200: #FEF6AB !default;
-$yellow100: #FEFBD4 !default;
-$yellow50: #FEFDEB !default;
+$yellow900: #776308;
+$yellow800: #907A0E;
+$yellow700: #B39A16;
+$yellow600: #D7BC20;
+$yellow500: #FADF2D;
+$yellow400: #FBE961;
+$yellow300: #FDF080;
+$yellow200: #FEF6AB;
+$yellow100: #FEFBD4;
+$yellow50: #FEFDEB;
+$yellow950: #fff;
+$yellow850: mix($yellow800, $yellow900);
+$yellow750: mix($yellow700, $yellow800);
+$yellow650: mix($yellow600, $yellow700);
+$yellow550: mix($yellow500, $yellow600);
+$yellow450: mix($yellow400, $yellow500);
+$yellow350: mix($yellow300, $yellow400);
+$yellow250: mix($yellow200, $yellow300);
+$yellow150: mix($yellow100, $yellow200);
 
 //Orange
-$orange900: #7A2601 !default;
-$orange800: #933603 !default;
-$orange700: #B74C05 !default;
-$orange600: #DB6707 !default;
-$orange500: #FF850A !default;
-$orange400: #FFAC47 !default;
-$orange300: #FFC46C !default;
-$orange200: #FFDC9C !default;
-$orange100: #FFEDD1 !default;
-$orange50: #FFF8E9 !default;
+$orange900: #7A2601;
+$orange800: #933603;
+$orange700: #B74C05;
+$orange600: #DB6707;
+$orange500: #FF850A;
+$orange400: #FFAC47;
+$orange300: #FFC46C;
+$orange200: #FFDC9C;
+$orange100: #FFEDD1;
+$orange50: #FFF8E9;
+$orange950: #fff;
+$orange850: mix($orange800, $orange900);
+$orange750: mix($orange700, $orange800);
+$orange650: mix($orange600, $orange700);
+$orange550: mix($orange500, $orange600);
+$orange450: mix($orange400, $orange500);
+$orange350: mix($orange300, $orange400);
+$orange250: mix($orange200, $orange300);
+$orange150: mix($orange100, $orange200);
 
 //Red
-$red900: #75072D !default;
-$red800: #8E0B2D !default;
-$red700: #B0122D !default;
-$red600: #D21B2A !default;
-$red500: #F52525 !default;
-$red400: #F9685A !default;
-$red300: #FC917B !default;
-$red200: #FEBEA7 !default;
-$red100: #FEE2D3 !default;
-$red50: #FEF2EB !default;
+$red900: #75072D;
+$red800: #8E0B2D;
+$red700: #B0122D;
+$red600: #D21B2A;
+$red500: #F52525;
+$red400: #F9685A;
+$red300: #FC917B;
+$red200: #FEBEA7;
+$red100: #FEE2D3;
+$red50: #FEF2EB;
+$red950: #fff;
+$red850: mix($red800, $red900);
+$red750: mix($red700, $red800);
+$red650: mix($red600, $red700);
+$red550: mix($red500, $red600);
+$red450: mix($red400, $red500);
+$red350: mix($red300, $red400);
+$red250: mix($red200, $red300);
+$red150: mix($red100, $red200);
 
 //Violet
-$violet900: #301270 !default;
-$violet800: #451D88 !default;
-$violet700: #632FA9 !default;
-$violet600: #8444CA !default;
-$violet500: #A95EEB !default;
-$violet400: #C585F3 !default;
-$violet300: #D89FF9 !default;
-$violet200: #EAC0FD !default;
-$violet100: #F6DFFE !default;
-$violet50: #FBF0FE !default;
+$violet900: #301270;
+$violet800: #451D88;
+$violet700: #632FA9;
+$violet600: #8444CA;
+$violet500: #A95EEB;
+$violet400: #C585F3;
+$violet300: #D89FF9;
+$violet200: #EAC0FD;
+$violet100: #F6DFFE;
+$violet50: #FBF0FE;
+$violet950: #fff;
+$violet850: mix($violet800, $violet900);
+$violet750: mix($violet700, $violet800);
+$violet650: mix($violet600, $violet700);
+$violet550: mix($violet500, $violet600);
+$violet450: mix($violet400, $violet500);
+$violet350: mix($violet300, $violet400);
+$violet250: mix($violet200, $violet300);
+$violet150: mix($violet100, $violet200);
 
 //Gray
-$gray900: #171D21 !default;
-$gray800: #222529 !default;
-$gray700: #505559 !default;
-$gray600: #63686C !default;
-$gray500: #8B9094 !default;
-$gray400: #ABB0B5 !default;
-$gray300: #CFD5D9 !default;
-$gray200: #E1E6EA !default;
-$gray100: #EBF1F5 !default;
-$gray50: #F6F8FA !default;
+$gray900: #171D21;
+$gray800: #222529;
+$gray700: #505559;
+$gray600: #63686C;
+$gray500: #8B9094;
+$gray400: #ABB0B5;
+$gray300: #CFD5D9;
+$gray200: #E1E6EA;
+$gray100: #EBF1F5;
+$gray50: #F6F8FA;
+$gray950: #fff;
+$gray850: mix($gray800, $gray900);
+$gray750: mix($gray700, $gray800);
+$gray650: mix($gray600, $gray700);
+$gray550: mix($gray500, $gray600);
+$gray450: mix($gray400, $gray500);
+$gray350: mix($gray300, $gray400);
+$gray250: mix($gray200, $gray300);
+$gray150: mix($gray100, $gray200);
 
-//Netural Gray
-$netural900: #212121 !default;
-$netural800: #424242 !default;
-$netural700: #616161 !default;
-$netural600: #757575 !default;
-$netural500: #9E9E9E !default;
-$netural400: #BDBDBD !default;
-$netural300: #E0E0E0 !default;
-$netural200: #EEEEEE !default;
-$netural100: #F5F5F5 !default;
-$netural50: #FAFAFA !default;
+//Neutral Gray
+$neutral900: #212121;
+$neutral800: #424242;
+$neutral700: #616161;
+$neutral600: #757575;
+$neutral500: #9E9E9E;
+$neutral400: #BDBDBD;
+$neutral300: #E0E0E0;
+$neutral200: #EEEEEE;
+$neutral100: #F5F5F5;
+$neutral50: #FAFAFA;
+$neutral950: #fff;
+$neutral850: mix($neutral800, $neutral900);
+$neutral750: mix($neutral700, $neutral800);
+$neutral650: mix($neutral600, $neutral700);
+$neutral550: mix($neutral500, $neutral600);
+$neutral450: mix($neutral400, $neutral500);
+$neutral350: mix($neutral300, $neutral400);
+$neutral250: mix($neutral200, $neutral300);
+$neutral150: mix($neutral100, $neutral200);
 
 //Black
-$black: #000000 !default;
+$black: #000000;
 
 //White
-$white: #FFFFFF !default;
+$white: #FFFFFF;
 
 //Pink
-$pink900: #731376 !default;
-$pink800: #8F1F87 !default;
-$pink700: #B1319C !default;
-$pink600: #D448AF !default;
-$pink500: #F763C1 !default;
-$pink400: #FA89C6 !default;
-$pink300: #FCA1C9 !default;
-$pink200: #FEC1D5 !default;
-$pink100: #FEE0E7 !default;
-$pink50: #FEF1F4 !default;
+$pink900: #731376;
+$pink800: #8F1F87;
+$pink700: #B1319C;
+$pink600: #D448AF;
+$pink500: #F763C1;
+$pink400: #FA89C6;
+$pink300: #FCA1C9;
+$pink200: #FEC1D5;
+$pink100: #FEE0E7;
+$pink50: #FEF1F4;
 
 //Cyan
-$cyan900: #0C446B !default;
-$cyan800: #155E81 !default;
-$cyan700: #2181A1 !default;
-$cyan600: #30A8C0 !default;
-$cyan500: #47D1DE !default;
-$cyan400: #67DDE0 !default;
-$cyan300: #91EBEB !default;
-$cyan200: #B8F5F3 !default;
-$cyan100: #DCFAFA !default;
-$cyan50: #E8F9FA !default;
+$cyan900: #0C446B;
+$cyan800: #155E81;
+$cyan700: #2181A1;
+$cyan600: #30A8C0;
+$cyan500: #47D1DE;
+$cyan400: #67DDE0;
+$cyan300: #91EBEB;
+$cyan200: #B8F5F3;
+$cyan100: #DCFAFA;
+$cyan50: #E8F9FA;
 
 //Indigo
-$indigo900: #131F76 !default;
-$indigo800: #21308F !default;
-$indigo700: #3448B1 !default;
-$indigo600: #4C64D4 !default;
-$indigo500: #6885F7 !default;
-$indigo400: #8DA5FA !default;
-$indigo300: #A4BAFC !default;
-$indigo200: #C3D2FE !default;
-$indigo100: #E1E9FE !default;
-$indigo50: #F1F5FE !default;
+$indigo900: #131F76;
+$indigo800: #21308F;
+$indigo700: #3448B1;
+$indigo600: #4C64D4;
+$indigo500: #6885F7;
+$indigo400: #8DA5FA;
+$indigo300: #A4BAFC;
+$indigo200: #C3D2FE;
+$indigo100: #E1E9FE;
+$indigo50: #F1F5FE;
