#10749 radio 폼 리팩토링(우다정 과장님 피드백 적용)

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1110,11 +1110,15 @@ input, button, select, optgroup, textarea {
 
 .vertical {
   display: block;
+  margin-top: 0.625rem;
+}
+.vertical:first-of-type {
+  margin-top: 0;
 }
 
 .horizontal {
   display: inline-block;
-  margin-right: 0.3125rem;
+  margin-right: 0.625rem;
 }
 
 /* _elements.scss 
