--- a/src/main/resources/public/src/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/src/scss/formDesigner/_layout.scss
@@ -242,9 +242,13 @@
 }
 .vertical {
   display: block;
+  margin-top: 0.625rem;
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
 
 .horizontal {
   display: inline-block;
-  margin-right: 0.3125rem;
+  margin-right: 0.625rem;
 }
