--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5000,9 +5000,8 @@ body.modal-active {
 
 .z-component-tooltip {
   position: relative;
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
   padding: 0.375rem 0.5rem;
-  margin: 0.375rem;
+  margin: 0.5rem;
   border: 0.0625rem dashed #D7DBE0;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
@@ -5030,7 +5029,7 @@ body.modal-active {
   width: 100%;
 }
 .z-component .z-component-label {
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0.938rem 0.4375rem 0;
 }
 .z-component .z-component-label.on {
@@ -5040,7 +5039,7 @@ body.modal-active {
   display: none;
 }
 .z-component .z-element {
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0;
 }
 .z-component .z-element .input {
@@ -5202,8 +5201,8 @@ body.modal-active {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  flex-basis: calc(((100% - 44px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 4px);
   margin: 0.9375rem 0 0 0;
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
 }
 .property .property-label {
   font-size: 0.875rem;
