--- a/src/main/resources/public/scss/portal/portal.scss
+++ b/src/main/resources/public/scss/portal/portal.scss
@@ -6,24 +6,24 @@
  */
 @charset 'utf-8';
 
-@import '../template/reset';          // 상속 불가
-@import '../template/functions';      // 상속 불가
-@import '../template/variables';      // 상속 불가
-@import '../template/mixins';         // 상속 불가
-@import '../template/utilities';      // 상속 불가
-@import 'variables';
-@import 'layout';
-@import 'elements';
-@import 'buttons';
-@import 'alerts';
-@import 'scrollbars';
-@import 'file-uploader';
-@import 'avatar';
-@import 'date-picker';
-@import 'tooltip';
-@import 'login';
-@import 'signup';
-@import 'error';
-@import 'session-invalid';
-@import 'browser-guide';
-@import 'email-certification';
+@import '../template/_reset.scss';          // 상속 불가
+@import '../template/_functions.scss';      // 상속 불가
+@import '../template/_variables.scss';      // 상속 불가
+@import '../template/_mixins.scss';         // 상속 불가
+@import '../template/_utilities.scss';      // 상속 불가
+@import '_variables.scss';
+@import '_layout.scss';
+@import '_elements.scss';
+@import '_buttons.scss';
+@import '_alerts.scss';
+@import '_scrollbars.scss';
+@import '_file-uploader.scss';
+@import '_avatar.scss';
+@import '_date-picker.scss';
+@import '_tooltip.scss';
+@import '_login.scss';
+@import '_signup.scss';
+@import '_error.scss';
+@import '_session-invalid.scss';
+@import '_browser-guide.scss';
+@import '_email-certification.scss';
