--- a/src/main/resources/public/scss/process/_layout.scss
+++ b/src/main/resources/public/scss/process/_layout.scss
@@ -1,4 +1,4 @@
-@import '../template/layout';
+@import '../template/_layout.scss';
 
 /* 프로세스 디자이너 팝업 layout
  * process-container - process-header : 상단
