--- a/src/main/resources/public/scss/process/process.scss
+++ b/src/main/resources/public/scss/process/process.scss
@@ -6,18 +6,18 @@
  */
 @charset 'utf-8';
 
-@import '../template/reset';          // 상속 불가
-@import '../template/functions';      // 상속 불가
-@import '../template/variables';      // 상속 불가
-@import '../template/mixins';         // 상속 불가
-@import '../template/utilities';      // 상속 불가
-@import 'variables';
-@import 'layout';
-@import 'elements';
-@import 'buttons';
-@import 'alerts';
-@import 'scrollbars';
-@import 'color-picker';
-@import 'tooltip';
-@import 'modal';
-@import 'thumbnail';
+@import '../template/_reset.scss';          // 상속 불가
+@import '../template/_functions.scss';      // 상속 불가
+@import '../template/_variables.scss';      // 상속 불가
+@import '../template/_mixins.scss';         // 상속 불가
+@import '../template/_utilities.scss';      // 상속 불가
+@import '_variables.scss';
+@import '_layout.scss';
+@import '_elements.scss';
+@import '_buttons.scss';
+@import '_alerts.scss';
+@import '_scrollbars.scss';
+@import '_color-picker.scss';
+@import '_tooltip.scss';
+@import '_modal.scss';
+@import '_thumbnail.scss';
