--- a/src/main/resources/public/scss/template/_mixins.scss
+++ b/src/main/resources/public/scss/template/_mixins.scss
@@ -1,10 +1,10 @@
-@import "mixins/animation";
-@import "mixins/position";
-@import "mixins/image";
-@import "mixins/scroll";
-@import "mixins/divider";
-@import "mixins/font";
-@import "mixins/text";
-@import "mixins/element";
-@import 'mixins/border';
-@import "mixins/layout";
+@import 'mixins/_animation.scss';
+@import 'mixins/_position.scss';
+@import 'mixins/_image.scss';
+@import 'mixins/_scroll.scss';
+@import 'mixins/_divider.scss';
+@import 'mixins/_font.scss';
+@import 'mixins/_text.scss';
+@import 'mixins/_element.scss';
+@import 'mixins/_border.scss';
+@import 'mixins/_layout.scss';
