--- a/src/main/resources/public/scss/template/_utilities.scss
+++ b/src/main/resources/public/scss/template/_utilities.scss
@@ -1,6 +1,6 @@
-@import "utilities/alignments";
-@import "utilities/flex";
-@import "utilities/columns";
-@import "utilities/spacing";
-@import "utilities/fonts";
-@import "utilities/common";
+@import 'utilities/_alignments.scss';
+@import 'utilities/_flex.scss';
+@import 'utilities/_columns.scss';
+@import 'utilities/_spacing.scss';
+@import 'utilities/_fonts.scss';
+@import 'utilities/_common.scss';
