#10836 폼 디자이너 - 속성 창 공통 부분 개선

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5250,7 +5250,7 @@ body.modal-active {
   flex-direction: row;
   justify-content: space-between;
 }
-.property .clipboard.copy {
+.property .clipboard .input {
   width: 100%;
 }
 .property .input {
