--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -46,9 +46,9 @@
 <body>
 <div class="alice-wrapper">
     <form id="frm" name="frm">
-        <div class="form-container">
+        <div class="z-form-container">
             <!-- 상단 네비게이션 -->
-            <div class="form-header" id="menuBar">
+            <div class="z-form-header" id="menuBar">
                 <img class="logo" th:src="@{/assets/media/icons/formDesigner/topmenu/icon_form_designer.svg}" width="169" height="25" alt="Form Designer" />
                 <span class="name ml-auto mr-auto" id="formName"></span>
                 <!--버튼 영역-->
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <!-- 컴포넌트 팔레트 -->
-            <div class="form-component-palette" id="componentPalette">
+            <div class="z-form-component-palette" id="componentPalette">
                 <div class="component-accordion-box" id="componentList">
                     <!-- inputs: 일반적인 입력 항목 -->
                     <div class="component-accordion">
@@ -227,14 +227,14 @@
                 </div>
             </div>
             <!-- 폼 -->
-            <div class="form-main" id="formMain">
+            <div class="z-form-main" id="formMain">
                 <div class="align-center drawing-board" id="formDrawingBoard"></div>
             </div>
             <!-- 속성 패널 -->
-            <div class="form-properties-panel-header breadcrumb">
+            <div class="z-form-properties-panel-header breadcrumb">
                 <span id="propertyName"></span>
             </div>
-            <div class="form-properties-panel" id="propertyPanel"></div>
+            <div class="z-form-properties-panel" id="propertyPanel"></div>
         </div>
     </form>
 </div>
