#10796 폼 리팩토링 - 폼 디자이너 저장 시간 표기

--- a/src/main/resources/public/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/scss/formDesigner/_layout.scss
@@ -258,3 +258,12 @@
   display: inline-block;
   margin-right: 0.625rem;
 }
+
+.save-info {
+  height: 2.188rem; //35px
+  margin-top: 1.5625rem; // 25px
+  font-size: $element-font-size;
+  font-weight: $element-font-weight;
+  color: $element-font-color;
+  text-align: center;
+}
